--- a/products-trade/less/products-page/components/_postcode-input.less
+++ b/products-trade/less/products-page/components/_postcode-input.less
@@ -22,6 +22,8 @@
 		font-size: 25px;
 		max-width: 120px;
 		text-align: center;
+		padding-top: 0;
+		padding-bottom: 0;
 		&::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 			line-height: 36px;
 		  font-size: 16px;
