--- a/products-trade/less/products-page/pages/_product-detail-main.less
+++ b/products-trade/less/products-page/pages/_product-detail-main.less
@@ -1164,7 +1164,7 @@
 					top: -4px;						  
 				}
 				&::-moz-placeholder { /* Firefox 19+ */
-					line-height: 45px;
+					line-height: 53px;
 					font-size: 16px;
 					position: relative;
 					top: -4px;						  
